[package]
name = "wandahoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soloud = "1.0.2"

[profile.release]
lto = true
strip = true
opt-level = "z"
debug = false
panic = "abort"
codegen-units = 1